# bonk

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  asio_fixes.cpp  bonk.sh  build_all.sh  deploy.sh  fix_includes.sh  redeploy.sh  separate_builds.sh  test_connection.sh  test_server.sh  test_websocket.html  websocket-test.html
.github/workflows/: build-test.yml
include/GL/: glut.h
include/core/: InputManager.h  Renderer.h  RoundManager.h  SoundPlayer.h
include/network/: Client.h  NetworkManager.h  Server.h  web.h
include/network/websocketpp/websocketpp/: compat.hpp
include/network/websocketpp/websocketpp/transport/asio/: connection.hpp  endpoint.hpp
include/network/websocketpp/websocketpp/transport/asio/security/: none.hpp  tls.hpp
include/physics/: Bouncy.h  GameObject.h  PhysicsEngine.h  Platform.h  Player.h  Swing.h
include/ui/: ColorOption.h  Game.h  GameOver.h  GameOverScene.h  GameScene.h  GangGrounds.h  GangGroundsScene.h  GravityOff.h  GravityOffScene.h  MainMenuScene.h  Map.h  MenuManager.h  OneVsOne.h  OneVsOneScene.h  SwingBattle.h  SwingBattleScene.h
src/: main.cpp
src/Maps/: OneVsOne.h  main.cpp  opengl_glut
src/core/: Game.cpp  InputManager.cpp  Renderer.cpp  RoundManager.cpp  SoundPlayer.cpp  Timer.cpp
src/network/: Client.cpp  NetworkManager.cpp  Server.cpp  web.cpp
src/physics/: Bouncy.cpp  GameObject.cpp  PhysicsEngine.cpp  Platform.cpp  Player.cpp  Swing.cpp  player.cpp
src/ui/: Game.cpp  GameOver.cpp  MenuManager.cpp  UIElement.cpp  opengl_glut  stb_image.cpp
src/ui/maps/: GangGrounds.cpp  GravityOff.cpp  Map.h  OneVsOne.cpp  OneVsOne.h  SwingBattle.cpp  main.cpp  map_test  opengl_glut
src/ui/scenes/: GangGroundsScene.cpp  MainMenuScene.cpp  OneVsOneScene.cpp
